[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
near-sys = "0.2.0"
uint = { version = "0.9.5", default-features = false }
hex = "0.4.3"


bs58 = "0.4"
ed25519-dalek = "1"
thiserror = "1.0.30"